--- a/002.md
+++ b/002.md
@@ -1,21 +1,6 @@
-<style>
-button[type=button]{
-    width:25%;
-    border:2px solid #aaa;
-    border-radius:4px;
-    margin:8px 0;
-    outline:none;
-    padding:8px;
-    box-sizing:border-box;
-    transition:.3s;
-  }
+[![Abu Dhabi Aloula](https://d3fg8lkx8f5xs7.cloudfront.net/325338195)](https://admdn2.cdn.mangomolo.com/adtv/smil:adtv.stream.smil/playlist.m3u8)
   
-  button[type=button]:focus{
-    border-color:dodgerBlue;
-    box-shadow:0 0 8px 0 dodgerBlue;
-  }
-  
-</style>
+
 
 <a href="http://142.112.39.133:8080/catv.mp4"><button type="button">Canadian Arab TV</button></a>
 <a href="http://142.112.39.133:8080/hls/catv/index.m3u8"><button type="button">Canadian Arab TV (720p)</button></a>
