--- a/002.md
+++ b/002.md
@@ -1,5 +1,5 @@
 [![Abu Dhabi Aloula](https://d3fg8lkx8f5xs7.cloudfront.net/325338195)](https://admdn2.cdn.mangomolo.com/adtv/smil:adtv.stream.smil/playlist.m3u8)
-[![Abu Dhabi Aloula](https://www.imdb.com/title/tt1529326/mediaviewer/rm1240342016/?ref_=ext_shr_lnk)](https://youtu.be/CSq_9COycbM)
+[![Abu Dhabi Aloula](https://d3fg8lkx8f5xs7.cloudfront.net/325338195)](https://admdn2.cdn.mangomolo.com/adtv/smil:adtv.stream.smil/playlist.m3u8)
 
 
 <a href="http://142.112.39.133:8080/catv.mp4"><button type="button">Canadian Arab TV</button></a>
