--- a/002.md
+++ b/002.md
@@ -2,6 +2,9 @@
 [![Abu Dhabi Aloula](https://d3fg8lkx8f5xs7.cloudfront.net/325338195)](https://admdn2.cdn.mangomolo.com/adtv/smil:adtv.stream.smil/playlist.m3u8)
 
 [![22 TV](https://image.winudf.com/v2/image/am8uamFzLmNoYS5jaGEyMnR2X2ljb25fMTUzNzc5NTA5OF8wNDU/icon.png?w=170&fakeurl=1)](http://82.212.74.99:8000/live/hls/8117.m3u8)
+[![2M Maroc](https://caidal.ma/wp-content/uploads/2019/04/ob_febd69_2-m-maroc-en-ligne.jpg)](http://149.100.19.226:8001/play/2M_Maroc)
+
+
 
 
 <a href="http://142.112.39.133:8080/catv.mp4"><button type="button">Canadian Arab TV</button></a>
