--- a/002.md
+++ b/002.md
@@ -6,8 +6,7 @@
 
 
 [![22 TV](https://github.com/280b9f9b/IPTV/blob/main/Tv-Logo/logo.jpg?raw=true)](http://82.212.74.99:8000/live/hls/8117.m3u8)
-
-![image](https://user-images.githubusercontent.com/4974793/124803020-a3f16b00-df69-11eb-9c7f-7700e3fed1db.png)
+![image](22 TV)
 
 
 <a href="http://142.112.39.133:8080/catv.mp4"><button type="button">Canadian Arab TV</button></a>
