--- a/003.md
+++ b/003.md
@@ -1,27 +1,7 @@
 <style>
-button[type=button]{
-    width:25%;
-    border:2px solid #aaa;
-    border-radius:4px;
-    margin:8px 0;
-    outline:none;
-    padding:8px;
-    box-sizing:border-box;
-    transition:.3s;
-  }
-  
-  button[type=button]:focus{
-    border-color:dodgerBlue;
-    box-shadow:0 0 8px 0 dodgerBlue;
-  }
-  
+mark{
+    color:red;
+}
 </style>
 
-
- <button type="button">Click Me!</button>
- 
- <button type="button" href="http://ns8.indexforce.com:1935/home/mystream/playlist.m3u8">Continue</button>
-
-<a href="http://www.stackoverflow.com/">
-     <button type="button">Click Me!</button>
-</a>
+<mark>what is DataBase</mark>
