--- a/003.md
+++ b/003.md
@@ -1,7 +1,14 @@
-<style>
-mark{
-    color:red;
-}
-</style>
+Heading Identifiers:
+### Red text title {#identifier .red}
 
-<mark>what is DataBase</mark>
+Fenced Code Attributes:
+{.red .numberLines startFrom="1"}
+
+Inline Code Attributes:
+`red text`{.red}
+
+Bracketed Spans:
+[This is *some red text*]{.red}
+
+Link Attributes:
+![alt text](the.jpg){.center}
