--- a/003.md
+++ b/003.md
@@ -11,4 +11,4 @@ Bracketed Spans:
 [This is *some red text*]{.red}
 
 Link Attributes:
-![alt text](the.jpg){.center}
+![alt text](http://admango.cdn.mangomolo.com/analytics/uploads/71/icons/live/duabi-racing-2-live.png){.center}
