--- a/003.md
+++ b/003.md
@@ -12,3 +12,7 @@ Bracketed Spans:
 
 Link Attributes:
 `red text`
+
+[<img src=http://admango.cdn.mangomolo.com/analytics/uploads/71/icons/live/duabi-racing-2-live.png  height=100/>](https://dmithrvll.cdn.mangomolo.com/dubairacing/smil:dubairacing.smil/playlist.m3u8)
+
+
