--- a/003.md
+++ b/003.md
@@ -18,4 +18,4 @@ Link Attributes:
 
 [`    22 TV    `](http://82.212.74.99:8000/live/hls/8117.m3u8)
 
-[![`22 TV`](https://github.com/280b9f9b/IPTV/blob/main/Tv-Logo/logo12.jpg?raw=true)](http://82.212.74.99:8000/live/hls/8117.m3u8)
+`red text`{.red}
