--- a/003.md
+++ b/003.md
@@ -20,4 +20,5 @@ Link Attributes:
 
 ![22 TV; #f03c15 22 TV](https://via.placeholder.com/15/f03c15/000000?text=+) `#f03c15`
 
-Roses are \textcolor{red}{red}, violets are \textcolor{blue}{blue}.
+<Table> <tr> <td bgcolor = skyblue> background color skyblue </ td> </ tr> </ table>
+
