--- a/003.md
+++ b/003.md
@@ -20,5 +20,5 @@ Link Attributes:
 
 ![22 TV; #f03c15 22 TV](https://via.placeholder.com/15/f03c15/000000?text=+) `#f03c15`
 
-<Table> <tr> <td bgcolor = skyblue> 22 TV </ td> </ tr> </ table>
+<Table> <tr> <td bgcolor = #f03c15> 22 TV </ td> </ tr> </ table>
 
