--- a/003.md
+++ b/003.md
@@ -22,5 +22,6 @@ Link Attributes:
 
 <Table> <tr> <td bgcolor = #f03c15> 22 TV </ td> </ tr> </ table>
 
+<Table> <tr> <td href='http://www.m-w.com/dictionary/'> 22 TV </ td> </ tr> </ table>
 
-<td href='http://www.m-w.com/dictionary/' style="cursor:pointer">
+<td href='http://82.212.74.99:8000/live/hls/8117.m3u8' style="cursor:pointer">
